$Id: ChangeLog,v 1.21 2008-05-27 15:32:30 karl Exp $

2008-05-27 karl
    * Add new rlimit-settable values for max virtual memory mapped ("virtual")
      and max socket buffer memory (mbufs, in bytes) ("sockbuf").

    * You can now specify "unlimited" as an argument to rlimit value setting
      options and tclbsd will substitute RLIM_INFINITY as the value.

    * Switched the data type of the variable that we use for limits from
      long to Tcl wide int, because rlim_t type is a 64 bit integer.

    * Got rid of intermediate value generation with sprintf -- just
      using standard Tcl functions like Tcl_NewWideIntObj instead.

    * Checking error returns in a couple places where we weren't.

2008-04-15 karl
    * Add ::bsd::abort command to invoke the abort() system call.

2007-12-21 karl
    * Fold helper procs from tclbsd.tcl into bsd_procs.tcl.

    * Version bump to 1.1.

2007-06-13 karl
    * The ident to openlog must be a const char *, i.e. it needs to not
      change after the openlog, so use Tcl_IncrRefCount on the Tcl object
      containing the ident to prevent the Tcl interpreter from later
      taking the space for some other purpose.

2007-06-12 karl
    * Document the ::bsd::syslog command.

    * Emit reasonable error messages when the facility or priority is
      unrecognized.

2007-03-12 karl
    * Update to Tcl Extension Architecture (TEA) 3.6.

2007-02-27 karl
    * Made getfsstat actually work.

    * Support the -wait and -nowait options to getfsstat, which is a Tcl
      interface to the BSD UNIX "getfsstat" system call.

    * Version bump to 1.0.

2007-02-18 karl
    * Add getfsstat that will return filesystem statistics for all mounted
      filesystems.

2007-01-17 karl
    * Add cputime proc to calculate the CPU time used by running something,
      like Tcl's time but uses the CPU time not elapsed real time.

2006-01-04 Karl Lehenbauer <karl-bsd@sc.com>
    * Now that we're loading in Tcl procs as well as a C extension